# pmw

./: .gitignore  LICENCE  MIDIperc  MIDIvoices  MakeRelease  Makefile.in  NOTICE  PSheader  README  README.md  configure.ac  post-install
contrib/: Brackets  Circles  CropMarks  FigBass  HandBells  MacroCollection  README  RubOut  SplitArrow  TAB  Vsquiggle  WingedRepeats
doc/: ChangeLog  Cygwin.txt  HACKNOTES  MacOS.txt  Makefile  Makefile.ALL  TheList.txt  TheList.xfpt  fontspec.xfpt  pmw.1  spec.xfpt
doc/examples/: ex01  ex02  ex03  ex04  ex05  ex06  ex07  ex08  ex09  ex10  ex11  ex12  ex13  ex14  ex15  ex16  ex17  ex18  ex19  ex20  ex21  ex22  ex23  ex24  ex25  ex26  ex27  ex28  ex29  ex30  ex31  ex32  ex33  ex34  ex35  ex36  ex37  ex38  ex39  ex40  (+32 more)
doc/figures/: fig01.aspic  fig02.aspic  fig03.aspic  fig04.aspic
doc/fontmetrics/: PMW-Music.afm
docs/: Sample00  Sample01  Sample03  Sample04  Sample05  index.html
fontmaint/: EncodeOTF  GOADB  PMW-Alpha.pfa  PMW-Alpha.raw  PMW-Alpha3  PMW-Music-T3  PMW-Music.otf.hexasc  PMW-Music.pfa  PMW-Music.raw  PMW-Music.ttx  README  Run  ShowMusic  ShowOne
fontmetrics/: AvantGarde-Book.afm  AvantGarde-BookOblique.afm  AvantGarde-Demi.afm  AvantGarde-DemiOblique.afm  Bookman-Demi.afm  Bookman-DemiItalic.afm  Bookman-Light.afm  Bookman-LightItalic.afm  Courier-Bold.afm  Courier-BoldOblique.afm  Courier-Oblique.afm  Courier.afm  Helvetica-Bold.afm  Helvetica-BoldOblique.afm  Helvetica-Oblique.afm  Helvetica.afm  LICENCE  NewCenturySchlbk-Bold.afm  NewCenturySchlbk-BoldItalic.afm  NewCenturySchlbk-Italic.afm  NewCenturySchlbk-Roman.afm  PMW-Alpha.afm  PMW-Music.afm  PMW-Music.utr  Palatino-Bold.afm  Palatino-BoldItalic.afm  Palatino-Italic.afm  Palatino-Roman.afm  Symbol.utr  Times-Bold.afm  Times-BoldItalic.afm  Times-Italic.afm  Times-Roman.afm  Utopia-Bold.afm  Utopia-BoldItalic.afm  Utopia-Italic.afm  Utopia-Regular.afm  ZapfChancery-MediumItalic.afm
ghpages/: index.html
macros/: FigBass  Fingering  StdMacs
psfonts/: PMW-Alpha  PMW-Music.pfa
src/: Makefile  README  config.h.in  debug.c  draw.c  error.c  font.c  functions.h  globals.c  globals.h  main.c  mem.c  midi.c  misc.c  out.c  paginate.c  pdf.c  pmw.h  pmw_read.c  pmw_read_header.c  pmw_read_note.c  pmw_read_stave.c  pmw_read_stavedirs.c  pout.c  preprocess.c  ps.c  rdargs.c  rdargs.h  read.c  setbar.c  setbeam.c  setnote.c  setother.c  setslur.c  settie.c  string.c  structs.h  tables.c  transpose.c  tree.c  (+14 more)
testdist/: RunTests
testdist/infiles/: Test01  Test02  Test03  Test04  Test05  Test06  Test07  Test08
testdist/outfiles/: Test01.ps  Test02.ps  Test03.ps  Test04.ps  Test05.ps  Test06.ps  Test07.ps  Test08.ps
testing/: ..ps  ManyConfigTests  RunTests
testing/B2PFtests/: Test1  Test2
(+626 files in other folders)
